--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="api_key_tmdb">f256ec040f1c2b91ad903cc394728e55</string>
     <string name="media_selection_tab_text_films">Films</string>
     <string name="media_selection_tab_text_series">Serie TV</string>
+    <string name="lorem_ipsum_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut velit libero, pulvinar a tellus vel, tincidunt ultrices urna. Nulla sodales ex odio, ac molestie augue rutrum eget. Sed quis aliquam metus, eget blandit arcu</string>
 </resources>
